@@ -63,6 +63,7 @@ S3method(edit, data.frame)
 S3method(edit, default)
 S3method(edit, matrix)
 S3method(edit, vignette)
+S3method(format, MethodsFunction)
 S3method(format, "aspell")
 S3method(format, "news_db")
 S3method(format, "object_size")
